--- a/client/package.json
+++ b/client/package.json
@@ -8,12 +8,20 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-community/masked-view": "^0.1.10",
+    "@react-navigation/bottom-tabs": "^5.11.2",
+    "@react-navigation/native": "^5.8.10",
     "expo": "~40.0.0",
     "expo-status-bar": "~1.0.3",
+    "metro": "^0.64.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
+    "react-native-gesture-handler": "^1.9.0",
     "react-native-paper": "^4.5.0",
+    "react-native-reanimated": "^1.13.2",
+    "react-native-safe-area-context": "^3.1.9",
+    "react-native-screens": "^2.16.1",
     "react-native-vector-icons": "^7.1.0",
     "react-native-web": "~0.13.12"
   },
