--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,8 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
+    "react-native-auto-height-image": "^3.2.3",
+    "react-native-fit-image": "^1.5.5",
     "react-native-gesture-handler": "^1.9.0",
     "react-native-paper": "^4.5.0",
     "react-native-reanimated": "^1.13.2",
